<resources>
    <string name="app_name">Reserve</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookings">Bookings</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorites">Favorites</string>
    <string name="required_agreement_title">Required Agreement</string>
    <string name="required_agreement_body">I agree to be bound by the policies and procedures concerning the use of space and resources at Cornell University.</string>
    <string name="reserve">RESERVE</string>
    <string name="date">Date</string>
    <string name="time">Time (One Hour)</string>
    <string name="all_booked">All booked!</string>
    <string name="one_hour_reservations">One Hour Reservations</string>
    <string name="select_time">Select Time</string>
    <string name="am">AM</string>
    <string name="am12">12:00 AM</string>
    <string name="am1">1:00 AM</string>
    <string name="am2">2:00 AM</string>
    <string name="am3">3:00 AM</string>
    <string name="am4">4:00 AM</string>
    <string name="am5">5:00 AM</string>
    <string name="am6">6:00 AM</string>
    <string name="am7">7:00 AM</string>
    <string name="am8">8:00 AM</string>
    <string name="am9">9:00 AM</string>
    <string name="am10">10:00 AM</string>
    <string name="am11">11:00 AM</string>
    <string name="pm">PM</string>
    <string name="pm12">12:00 PM</string>
    <string name="pm1">1:00 PM</string>
    <string name="pm2">2:00 PM</string>
    <string name="pm3">3:00 PM</string>
    <string name="pm4">4:00 PM</string>
    <string name="pm5">5:00 PM</string>
    <string name="pm6">6:00 PM</string>
    <string name="pm7">7:00 PM</string>
    <string name="pm8">8:00 PM</string>
    <string name="pm9">9:00 PM</string>
    <string name="pm10">10:00 PM</string>
    <string name="pm11">11:00 PM</string>
    <string name="cancel">cancel</string>
</resources>