<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestReservationActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/colorSurface"
        android:src="@drawable/x"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:tint="?attr/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/buildingName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Upson Hall"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buildingName"
            android:layout_marginBottom="10dp"
            android:text="Upson 216"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:foregroundGravity="center"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:adjustViewBounds="true"
                android:scaleType="matrix" />

        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imageCard"
            android:layout_marginVertical="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_alignParentStart="true"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDate"
            android:layout_alignStart="@id/dateSelect"
            android:layout_alignParentStart="true"
            android:text=""
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_alignStart="@id/timeSelect"
            android:text="@string/time"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dateSelect"
            style="?android:spinnerStyle"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_below="@id/textTime"
            android:layout_alignParentStart="true"
            android:textColor="?attr/android:textColor"
            android:textSize="16sp" />


        <Button
            android:id="@+id/timeSelect"
            style="?android:spinnerStyle"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/textTime"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/dateSelect"
            android:textColor="?attr/android:textColor"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/timeSelect"
            android:layout_marginVertical="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/titleRequiredAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:text="@string/required_agreement_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bodyRequiredAgree"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleRequiredAgree"
            android:layout_alignParentStart="true"
            android:text="@string/required_agreement_body"
            android:textColor="@color/grey" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:layout_alignParentEnd="true"
            android:buttonTint="?attr/colorSecondary"
            android:scaleX="1.25"
            android:scaleY="1.25" />
    </RelativeLayout>

    <View
        android:id="@+id/dividerBot"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/reserveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reserveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:paddingVertical="10dp"
        android:text="@string/reserve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>